--- a/index.html
+++ b/index.html
@@ -276,10 +276,10 @@
             
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/TheBaddest.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/GouZhiQiShi.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/TheBaddest.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="MMD The Baddest"><i class="bx bx-plus"></i></a>
-                <a href="https://www.bilibili.com/video/BV1qY4y177TT?share_source=copy_web" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="assets/img/portfolio/GouZhiQiShi.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="MMD The Baddest"><i class="bx bx-plus"></i></a>
+                <a href="https://www.bilibili.com/video/BV1fG411n75R" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>  
