modified:   index.html

--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/GouZhiQiShi.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/GouZhiQiShi.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="MMD The Baddest"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/portfolio/GouZhiQiShi.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="MMD 【原神】提瓦特萝莉团 勾指起誓 MMD 草神不歪"><i class="bx bx-plus"></i></a>
                 <a href="https://www.bilibili.com/video/BV1fG411n75R" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
