--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
               <img src="assets/img/portfolio/RocketChat.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/RocketChat.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="RocketChat"><i class="bx bx-plus"></i></a>
-                <a href="http://106.14.146.255:3000/" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="https://rocketchat.grayson0130.tk/" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
