--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
               <img src="assets/img/portfolio/portfolio-6.png" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-6.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="NAS & OMV"><i class="bx bx-plus"></i></a>
-                <a href="https://www.yuque.com/books/share/4bf9e7ea-9040-473c-af95-8d83295b3a99?# 《Join my NasOMV》" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="https://halo.grayson0130.tk/archives/nas" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
