--- a/index.html
+++ b/index.html
@@ -97,14 +97,14 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>30 January 1995</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.grayson0130.top</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>halo.grayson0130.tk</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+86 18664914124</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Shenzhen, China</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>27</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>28</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>jinhui_zhao0130@163.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
@@ -124,8 +124,8 @@
 
         <div class="section-title">
           <h2>Skills</h2>
-          <p>One of the most crucial skills an PM can possess is strong problem-solving abilities.
-            A large part of an PM’s job is assessing a situation, identifying problems and then finding solutions. 
+          <p>One of the most crucial skills an Freelancer can possess is strong problem-solving abilities.
+            A large part of an Freelancer’s job is assessing a situation, identifying problems and then finding solutions. 
             Employers will want to see that you’re capable of handling obstacles in your daily work.</p>
         </div>
 
