--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
               <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="InSeason Shop"><i class="bx bx-plus"></i></a>
-                <a href="https://www.inseason.work/" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="" title="E-commerce with Wordpress"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
