--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Grayson Developer</title>
+  <title>Grayson Freelancer</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -69,7 +69,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Jinhui ZHAO</h1>
-      <p>I'm a <span class="typed" data-typed-items="Designer, Translator, Programmer"></span></p>
+      <p>I'm a <span class="typed" data-typed-items="Consultant, Translator, Programmer"></span></p>
     </div>
   </section>
 
@@ -141,7 +141,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Photoshop <i class="val">85%</i></span>
+              <span class="skill">Livestream <i class="val">85%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
