--- a/index.html
+++ b/index.html
@@ -250,12 +250,10 @@
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Web Developer</h4>
-              <h5>2019 - 2020</h5>
-              <p><em>Rennes School of Business,Rennes,France</em></p>
+              <h4>IT Consultant</h4>
               <ul>
-                <li>Web Type: Online shop, Corporate site, Private server,Instant messaging, Fitness, etc.</li>
-                <li>Part-time Traslator: proofreading and subtitling for fitness videos</li>
+                <li>Area: Online shop, Corporate site, Private server,Instant messaging, Fitness, etc.</li>
+                <li>Programming: HTML, CSS, JavaScript</li>
               </ul>
             </div>
           </div>
