--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
             <div class="resume-item pb-0">
               <h4>Jinhui ZHAO</h4>
               <p><em>Innovative and deadline-driven Freelancer with 2+ years of 
-                experience in designing and developing Corporate Post Page, Localization</em></p>
+                experience in translation and developing Corporate Post Page, Localization</em></p>
             </div>
 
             <h3 class="resume-title">Education</h3>
