--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>1306,Building 27,Cambrige Garden 2rd</p>
+                <p>401, Building 4, Weiqiantang, Baoan District</p>
               </div>
 
               <div class="email">
