--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
                 <p>+86 18664914124</p>
               </div>
 
-              <iframe src="assets/img/address.png" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
+              <!--<iframe src="assets/img/address.png" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>-->
             </div>
 
           </div>
