--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Jinhui ZHAO</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="#" class="Wechat"><i class="fab fa-weixin" title="zjh77889900"></i></a>
+          <a href="#" class="Wechat"><i class="fab fa-weixin" title="zxg19950130"></i></a>
           <a href="#" class="Github"><i class="fab fa-github" title="Grayson0130"></i></a>
           <a href="#" class="google-plus"><i class="fab fa-skype" title="+8618664914124"></i></a>
           <a href="#" class="linkedin"><i class="fab fa-linkedin" title="+8618664914124"></i></a>
