--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
               <img src="assets/img/portfolio/portfolio-6.png" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-6.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="NAS & OMV"><i class="bx bx-plus"></i></a>
-                <a href="https://halo.grayson0130.tk/archives/nas" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="https://halo.grayson0130.xyz/archives/nas" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -357,7 +357,7 @@
               <img src="assets/img/portfolio/RocketChat.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/RocketChat.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="RocketChat"><i class="bx bx-plus"></i></a>
-                <a href="https://rocketchat.grayson0130.tk/" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="https://rocketchat.grayson0130.xyz" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
